--- a/auth-code-flow-ui/src/main/resources/templates/home.html
+++ b/auth-code-flow-ui/src/main/resources/templates/home.html
@@ -11,6 +11,11 @@
     <div class="jumbotron">
         <h1>Auth Code Flow UI - Home</h1>
     </div>
+    <div class="row">
+        <div class="col text-center">
+            <a href="/secure" class="btn btn-primary">Access Secure</a>
+        </div>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
