--- a/auth-code-flow-ui/src/main/resources/templates/secure.html
+++ b/auth-code-flow-ui/src/main/resources/templates/secure.html
@@ -15,6 +15,50 @@
         <form name="fetch-customers" th:action="@{/customers}" th:formmethod="POST">
             <button type="submit" class="btn btn-primary">Customers</button>
         </form>
+        <div th:unless="${error == null}" class="mt-1">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <td>Status Code</td>
+                        <td>Error</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <span th:text="${error.statusCode}"></span>
+                        </td>
+                        <td>
+                            <span th:text="${error.body}"></span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div th:if="${error == null}" class="mt-1">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <td>First Name</td>
+                        <td>Last Name</td>
+                        <td>DL Number</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="customer: ${customers}">
+                        <td>
+                            <span th:text="${customer.firstName}"></span>
+                        </td>
+                        <td>
+                            <span th:text="${customer.lastName}"></span>
+                        </td>
+                        <td>
+                            <span th:text="${customer.dlNumber}"></span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
